feat: implement form with redirect payment manager, bank list with web redirect support, update iDeal, DotPay drop-in to use new payment manager (#467)
* feat: add Adyen-iDeal support in headless list of payment methods

* test: implement tests for AdyenIdealPaymentMethodDescriptor

* feat: fix typo in PrimerHeadlessSteppable, implement error and event logging delegates

* chore: refactor BanksFilterInteractor, BanksInteractor to use BaseSuspendInteractor instead of BaseFlowInteractor

* feat: implement GetBanksDelegate

* feat: implement BankIssuerTokenizationDelegate

* feat: implement PrimerHeadlessFormComponent, FormCollectableData, BanksCollectableData, BanksStep

* feat: implement BanksComponent

* fix: fix AnalyticsInteractor resolution

* feat: implemented PrimerHeadlessUniversalCheckoutFormWithRedirectManager

* feat: implement Adyen-iDeal headless example screen

* feat: use form with redirect payment method manager in Drop-in iDeal and DotPay implementations

* chore: removed Git Toolbox configuration

* chore: update ProGuard rules to exclude new payment manager and related classes from obfuscation

* chore: update ProGuard rules to exclude IssuingBank from obfuscation

* feat: implement bank search in drop-in iDeal UI

* fix: collect analytics interactor via IO dispatcher to avoid blocking the main thread

* chore: debounce collection in BanksComponent

* test: update BanksComponentTest to account for collection debounce

* feat: implement bank search in sample headless iDeal UI

* chore: log analytics events after loading banks and after tokenization to avoid slowdown

* test: fix test in BanksComponentTest

* feat: implement WebRedirectDelegate and unit tests

* feat: implement WebRedirectLoggingDelegate and unit tests

* feat: implement WebRedirectComponent and unit tests

* chore: rename payment manager and update provider function signature

* chore: rename 'formWithRedirect' package to 'component

--- a/example/src/main/res/navigation/nav_graph.xml
+++ b/example/src/main/res/navigation/nav_graph.xml
@@ -156,6 +156,31 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+        <action
+            android:id="@+id/action_HeadlessFragment_to_AdyenBankSelectionFragment"
+            app:destination="@id/AdyenBankSelectionFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/AdyenBankSelectionFragment"
+        android:name="io.primer.sample.adyen.ideal.AdyenBankSelectionFragment"
+        android:label="Ideal"
+        tools:layout="@layout/fragment_adyen_bank_selection">
+
+        <action
+            android:id="@+id/action_AdyenBankSelectionFragment_to_HeadlessFragment"
+            app:destination="@id/HeadlessFragment"
+            app:popUpTo="@id/HeadlessFragment"
+            app:launchSingleTop="true"
+            app:popUpToInclusive="false" />
+        <argument
+            android:name="paymentMethodType"
+            app:argType="string" />
     </fragment>
 
     <fragment
