--- a/primer-sdk-android/src/main/res/layout/fragment_dotpay_bank_selection.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_dotpay_bank_selection.xml
@@ -60,7 +60,7 @@
             android:background="@drawable/divider_bank_selection" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/choose_bank_recycler_view"
+            android:id="@+id/banks_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/choose_bank_divider_top"
@@ -74,7 +74,7 @@
             android:id="@+id/choose_bank_divider_bottom"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_alignBottom="@id/choose_bank_recycler_view"
+            android:layout_alignBottom="@id/banks_list"
             android:background="@drawable/divider_bank_selection"
             android:visibility="gone" />
 
