fix: Klarna drop-in stuck in loading state when SDK returns error (#533)
* fix: hide Klarna Drop-in back button when starting Klarna via showPaymentMethod()

* chore: emit Checkout(Payment)Error in Klarna Drop-in

* chore: update KlarnaComponentTest to assert checkout errors are resolved

--- a/primer-sdk-android/src/main/res/layout/fragment_klarna_payment_category_selection.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_klarna_payment_category_selection.xml
@@ -77,7 +77,7 @@
             android:id="@+id/payment_category_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:constraint_referenced_ids="payment_method_back,payment_categories,authorize" />
+            app:constraint_referenced_ids="payment_categories,authorize" />
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/progress_bar"
