feat(CVV-recapture): Adds cvv recapture to drop in (#531)
* feat: adding initial layout and fragment for VaultedPaymentMethodsCvvRecaptureFragment

* chore: cleaning up validation logic

* feat: adding new payment method option

* chore: linting

* feat(CVV-recapture): Improved CVV recapture screen, added translations

* chore: linting fixes

* style: fixed translations placeholder type

* chore: added analytics events

* style: linting

---------

Co-authored-by: semirp <85510694+semirp@users.noreply.github.com>
Co-authored-by: Semir <semir@primer.io>

--- a/example/src/main/res/layout/fragment_settings.xml
+++ b/example/src/main/res/layout/fragment_settings.xml
@@ -157,6 +157,13 @@
                 android:layout_height="wrap_content"
                 android:text="@string/ui_settings_disable_init_screen" />
 
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/enableCvvRecaptureFlow"
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="10dp"
+                android:layout_height="wrap_content"
+                android:text="@string/ui_settings_enable_cvv_recapture" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/descriptorTextFieldLayout"
                 android:layout_width="match_parent"
