chore: multiple drop-in ACH fixes (#641)
* chore: remove brackets from ACH mandate drop-in template

* feat: ACH drop-in fixes (#643)

* ci(mobile-appium-tests): Changed url for mobile-appium-tests repo (#642)

* chore: use ACH specific cancel and success message

* chore: add data usage info text

* chore: enable ACH continue button when the user details screen is opened

* fix: lint issues

* chore: enable ACH user collector 'Continue' button by default

* chore: add missing translations for ACH drop-in

* chore: refactor PayButton into SubmissionButton for reuse in ACH

* Revert "chore: refactor PayButton into SubmissionButton for reuse in ACH"

This reverts commit 06714203d3856f68449b616cd6801638144b432e.

* chore: implement loading indicator on ACH mandate Accept button

* chore: refactor PayButton to use FrameLayout

* chore: move common loading button constants to separate file

* chore: update ACH drop-in mandate template text

* chore: rename ACH title string key

* chore: rename ACH user details subtitle string

* chore: update ACH strings

* chore: use orEmpty() instead of empty string

* chore: make AchMandateActionHandler internal, replace hardcoded string in layout

---------

Co-authored-by: semirp <85510694+semirp@users.noreply.github.com>

* chore: reduce nesting in getSuccessMessage()/getErrorMessage()

---------

Co-authored-by: semirp <85510694+semirp@users.noreply.github.com>

--- a/primer-sdk-android/src/main/res/layout/accept_ach_mandate_button.xml
+++ b/primer-sdk-android/src/main/res/layout/accept_ach_mandate_button.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/pay_button_height"
-    android:gravity="center"
-    tools:background="@color/primer_pay_button_background">
+    android:layout_height="wrap_content"
+    android:gravity="center">
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button"
-        style="@style/Primer.NewButton.Pay"
+        style="@style/Primer.NewButton.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:enabled="false"
-        tools:text="Pay $99"
-        tools:textColor="@android:color/white" />
+        android:text="@string/stripe_ach_mandate_accept_button"
+        android:textAllCaps="false"
+        android:textFontWeight="600"
+        tools:targetApi="p"
+        tools:text="@string/stripe_ach_mandate_accept_button" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/progressIndicator"
