--- a/primer-sdk-android/src/main/res/drawable/divider_bank_selection.xml
+++ b/primer-sdk-android/src/main/res/drawable/divider_bank_selection.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/primer_bank_selection_divider" />
-    <size android:height="0.5dp" />
+    <size android:height="@dimen/primer_bank_selection_divider_height" />
 </shape>
