--- a/primer-sdk-android/src/main/res/values-night/colors.xml
+++ b/primer-sdk-android/src/main/res/values-night/colors.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--  custom colors for bank selector -->
-    <color name="primer_bank_selection_divider">#DBDBDB</color>
-    <color name="primer_bank_selection_arrow">#FFFFFF</color>
-    <color name="primer_bank_selection_logo_tint">#FFFFFF</color>
-    <color name="primer_bank_search_input_border">@android:color/transparent</color>
-    <color name="primer_bank_search_icon">@android:color/white</color>
-
+    <color name="primer_divider">#DBDBDB</color>
+    <color name="primer_icon_tint">#FFFFFF</color>
+    <color name="primer_search_input_border">@android:color/transparent</color>
+    <color name="primer_image_placeholder">#E5E5EA</color>
 </resources>
