--- a/primer-sdk-android/src/main/res/values/dimens.xml
+++ b/primer-sdk-android/src/main/res/values/dimens.xml
@@ -57,6 +57,7 @@
     <dimen name="primer_bottom_sheet_corner_radius">0dp</dimen>
     <dimen name="primer_bottom_sheet_header_height">56dp</dimen>
     <dimen name="primer_selector_padding">12dp</dimen>
+    <dimen name="primer_divider_height">0.5dp</dimen>
 
     <!-- text -->
     <dimen name="primer_default_fontsize">18sp</dimen>
@@ -80,10 +81,6 @@
     <dimen name="primer_input_fontsize">@dimen/primer_default_fontsize</dimen>
     <dimen name="primer_search_input_fontsize">@dimen/primer_text_size_sm</dimen>
     <dimen name="primer_input_border_width">1dp</dimen>
-
-    <!--  custom dimens for bank selector -->
-    <dimen name="primer_bank_selection_divider_height">0.5dp</dimen>
-    <dimen name="primer_bank_search_input_border_width">0.5dp</dimen>
 
     <!-- Dummy APM actions -->
     <dimen name="primer_decision_radio_button_height">48dp</dimen>
