Feat: co-badge support for drop-in (#802)
* Implement co-badge support for drop-in

Use StateFlow instead of LiveData for state for easier testing

Do not enable submit button when metadat is fetching

Show styled surcharge text

Show empty card on initial state

Implement Co-badge card selection

* Improve test coverage

* Only show surcharge if exceeds 0

* Enable co-badge popup appium testing

* Sync with master

---------

Co-authored-by: semirp <85510694+semirp@users.noreply.github.com>

--- a/api-shared/src/main/res/values/colors.xml
+++ b/api-shared/src/main/res/values/colors.xml
@@ -17,6 +17,9 @@
     <color name="primer_button_primary_disabled">#F1F1F4</color>
     <color name="primer_secondary">@android:color/black</color>
 
+    <color name="primer_gray_100">#F1F1F4</color>
+    <color name="primer_gray_200">#E5E5EA</color>
+
     <color name="bank_transfer">#0054A6</color>
 
     <!--  PRIMER THEME  -->
